# myProjects

./: README.md  github-personal-access-token
.github/workflows/: ci.yml
.vscode_ctv/: c_cpp_properties.json  launch.json  settings.json  tasks.json
Cpp/BenchmarkPersistency/: app_benchmark  bazel-BenchmarkPersistency  bazel-bin  bazel-out  bazel-testlogs  persisted.xml  third_party
Cpp/BenchmarkTemplate/: readme.md
Cpp/Parameter_list/: a.out  decay_decltype.cpp  event  event.cpp  float_to_integers.cpp  signed_unsigned_conversio  signed_unsigned_conversio.cpp  signed_unsigned_num  signed_unsigned_num.cpp  variadic_template_parameter_pacl  variadic_template_parameter_pacl.cpp
Cpp/PersistBinary/: WORKSPACE  bazel-PersistBinary  bazel-bin  bazel-out  bazel-testlogs  persisted  persisted_with_vector
Cpp/Persistency/: .clang-format  Readme.md  bazel-PersistBinary  bazel-Persistency  bazel-bin  bazel-out  bazel-testlogs  bazelbuild.sh
Cpp/challenges/: reverseofstring  reverseofstring.cpp  stringreveseinline  stringreveseinline.cpp  substringanagram  substringanagram.cpp
Cpp/constructors_desctructors/: explicit_usage  (+1 more)
Cpp/crc/: crc8  (+5 more)
Cpp/xmladapter/: CMakeLists.txt
Cpp/xmladapter/FunctorAsAdapter/: bazel-FunctorAsAdapter  bazel-bin  bazel-out  bazel-testlogs  sample.txt
Cpp/xmladapter/FunctorAsAdapter/app/: BUILD  main.cpp  maincpp_templatemembers  mainwithsimplereadwritetofile.cpp  notes  persistance.hpp  persistant.hpp  pugixml.cpp  speed.hpp
Cpp/xmladapter/FunctorAsAdapter/pugixml_src/: pugixml.hpp
Cpp/xmladapter/src/: main.cpp  sample.xml  sample2.xml
(+113 files in other folders)
